eliminate unnecessary boxing and unboxing